# avid

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: internal_utils.cmake
src/: CMakeLists.txt  avid.hpp
src/avid/: CMakeLists.txt  platform.hpp
src/avid/platform/: CMakeLists.txt  config.hpp  platform.cpp  predef.hpp
src/avid/platform/config/: cxx11.hpp  cxx14.hpp  cxx98.hpp
src/avid/platform/predef/: architecture.cpp  architecture.hpp  compiler.cpp  compiler.hpp  make.hpp  os.cpp  os.hpp  version_number.cpp  version_number.hpp
src/avid/platform/predef/architecture/: x86_32.hpp
src/avid/platform/predef/compiler/: clang.hpp  compiler_detected.hpp  gcc.hpp  visualc.hpp
src/avid/platform/predef/os/: windows.hpp
src/avid_main/: CMakeLists.txt  avid_main.cpp
test/: CMakeLists.txt
test/framework_test/: CMakeLists.txt
test/unit_test/: CMakeLists.txt
