
#*************************************************************************************************
#
#	avid/src/CMakeLists.txt
#
#*************************************************************************************************


# add sub directories
add_subdirectory(avid_main/)






























































