
#*************************************************************************************************
#
#	avid/src/avid/CMakeLists.txt
#
#*************************************************************************************************


# add sub directories
add_subdirectory(platform/)


# avid
avid_library(avid)





























































